<resources>
    <string name="app_name">Employees</string>
    <string name="nama">Nama</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="tempat_tgl_lahir">Tempat, Tgl. Lahir</string>
    <string name="status">Status</string>
    <string name="alamat">Alamat</string>
    <string name="hapus">Hapus</string>
    <string name="nama_karyawan">Nama Karyawan</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="simpan">Simpan</string>
    <string name="ubah">Ubah</string>
</resources>