<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />

        <TextView
            android:id="@+id/tv_hint_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            app:layout_constraintEnd_toStartOf="@+id/gl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tv_hint_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/gl"
            app:layout_constraintTop_toTopOf="@+id/tv_hint_name"
            tools:text="Indra David" />

        <TextView
            android:id="@+id/tv_hint_gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/jenis_kelamin"
            app:layout_constraintEnd_toStartOf="@+id/gl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_hint_name" />

        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tv_hint_gender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/gl"
            app:layout_constraintTop_toTopOf="@+id/tv_hint_gender"
            tools:text="Laki-laki" />

        <TextView
            android:id="@+id/tv_hint_dob"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tempat_tgl_lahir"
            app:layout_constraintEnd_toStartOf="@+id/gl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_hint_gender" />

        <TextView
            android:id="@+id/tv_dob"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tv_hint_dob"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/gl"
            app:layout_constraintTop_toTopOf="@+id/tv_hint_dob"
            tools:text="Jakarta" />

        <TextView
            android:id="@+id/tv_hint_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/status"
            app:layout_constraintEnd_toStartOf="@+id/gl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_hint_dob" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tv_hint_status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/gl"
            app:layout_constraintTop_toTopOf="@+id/tv_hint_status"
            tools:text="Belum Nikah" />

        <TextView
            android:id="@+id/tv_hint_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/alamat"
            app:layout_constraintEnd_toStartOf="@+id/gl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_hint_status" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="@+id/tv_hint_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/gl"
            app:layout_constraintTop_toTopOf="@+id/tv_hint_address"
            tools:text="@tools:sample/lorem/random" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:text="@string/hapus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_hint_address" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>